<resources>
    <string name="app_name">MyFirstTests</string>
    <string name="email_label">Your Email address:</string>
    <string name="save">Save</string>
    <string name="email_hint">Enter your Email</string>
    <string name="invalid_email">Invalid email</string>
    <string name="valid_email">OK</string>
    <string name="enter_pass">Enter your password</string>
    <string name="confirm_pass">Confirm your password</string>
    <string name="check">Check</string>
    <string name="passwords_match">That\'s okey, passwords match!</string>
    <string name="passwords_mismatch">Passwords mismatch!</string>

    <dimen name="activity_padding">16dp</dimen>
    <dimen name="main_margin">20dp</dimen>
</resources>